# dotdo

./: .gitignore  Dockerfile  README.rst  dotdo.py  example.ini  example.py  pyproject.toml  run-example
